After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 725090 - debugutilsbad: fails gst-indent check
debugutilsbad: fails gst-indent check
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal trivial
: 1.3.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-02-24 20:20 UTC by Kipp
Modified: 2014-02-25 09:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gst-indent debugutilsbad.c (2.52 KB, patch)
2014-02-24 20:20 UTC, Kipp
committed Details | Review

Description Kipp 2014-02-24 20:20:18 UTC
Created attachment 270182 [details] [review]
gst-indent debugutilsbad.c

trying to add a tsvenc element to gst-plugins-bad.  have been asked to ensure new code passes gst-indent, except the existing code already in the plugin fails the indent check.  making all the code touched by the patch pass an indent check would make the patch modify more lines than it should.  this first patch should take care of getting the existing code to pass an indent check by itself so that the subsequent patch to add the new element doesn't need to modify unrelated code.
Comment 1 Sebastian Dröge (slomo) 2014-02-25 09:04:48 UTC
commit ba0a3f65ebd27833d18ed5a504d3b6df1a22998f
Author: Kipp Cannon <kcannon@cita.utoronto.ca>
Date:   Mon Feb 24 14:56:03 2014 -0500

    debugutilsbad.c fails gst-indent check
    
    this patch is "gst-indent debugutilsbad.c"
    
    https://bugzilla.gnome.org/show_bug.cgi?id=725090