debugutilsbad.c fails gst-indent check

this patch is "gst-indent debugutilsbad.c"

https://bugzilla.gnome.org/show_bug.cgi?id=725090